force-app/main/default/objects/Service_Enrollment__c/Service_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Service Enrollment</label>
    <nameField>
        <label>Service Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>