force-app/main/default/objects/Service_Enrollment__c/fields/Age_when_Disability_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Age_when_Disability_Diagnosis__c</fullName>
    <label>Age when Disability/Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior to age 26</fullName>
            </value>
            <value>
                <fullName>Between 27 and 45</fullName>
            </value>
            <value>
                <fullName>At age 46 or after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>