force-app/main/default/objects/Service_Enrollment__c/fields/Beneficiary_Own_Use_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Own_Use_Cell_Phone__c</fullName>
    <label>Beneficiary Own/Use Cell Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>