force-app/main/default/objects/Service_Enrollment__c/fields/Billing_Do_Not_Pay_Watermark_Display__c.field-meta.xml
<CustomField>
    <fullName>Billing_Do_Not_Pay_Watermark_Display__c</fullName>
    <formula>&quot;No&quot;</formula>
    <label>Billing Do Not Pay Watermark Display</label>
    <type>Text</type>
</CustomField>