force-app/main/default/objects/Service_Enrollment__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_Abreviations</valueSetName>
    </valueSet>
</CustomField>