force-app/main/default/objects/Service_Enrollment__c/fields/Billing_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_1__c</fullName>
    <label>Billing Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>