force-app/main/default/objects/Service_Enrollment__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <label>Billing Zip Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>