force-app/main/default/objects/Service_Enrollment__c/fields/Caller_Relationship_to_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Caller_Relationship_to_Beneficiary__c</fullName>
    <label>Caller Relationship to Beneficiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>