force-app/main/default/objects/Service_Enrollment__c/fields/Care_Manager_Account__c.field-meta.xml
<CustomField>
    <fullName>Care_Manager_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Manager Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Enrollments</relationshipLabel>
    <relationshipName>Service_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>