force-app/main/default/objects/Service_Enrollment__c/fields/Care_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Care_Manager_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Manager Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Enrollments (Care Manager Contact)</relationshipLabel>
    <relationshipName>Service_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>