force-app/main/default/objects/Service_Enrollment__c/fields/Care_Manager_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Care_Manager_Contact_Email__c</fullName>
    <formula>Care_Manager_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Manager Contact Email</label>
    <type>Text</type>
</CustomField>