force-app/main/default/objects/Service_Enrollment__c/fields/Care_Manager_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Care_Manager_Contact_Phone__c</fullName>
    <formula>Care_Manager_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Manager Contact Phone</label>
    <type>Text</type>
</CustomField>