force-app/main/default/objects/Service_Enrollment__c/fields/Case_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Email__c</fullName>
    <formula>Case_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Manager Email</label>
    <type>Text</type>
</CustomField>