force-app/main/default/objects/Service_Enrollment__c/fields/Case_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_ID__c</fullName>
    <formula>CASESAFEID(Case_Manager__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Manager ID</label>
    <type>Text</type>
</CustomField>