force-app/main/default/objects/Service_Enrollment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Enrollments</relationshipLabel>
    <relationshipName>Service_Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>