force-app/main/default/objects/Service_Enrollment__c/fields/Client_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile_ID__c</fullName>
    <formula>Client__r.Original_Profile_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Profile ID</label>
    <type>Text</type>
</CustomField>