force-app/main/default/objects/Service_Enrollment__c/fields/Close_Lett__c.field-meta.xml
<CustomField>
    <fullName>Close_Lett__c</fullName>
    <label>Closure Letter Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>