force-app/main/default/objects/Service_Enrollment__c/fields/Closure_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closure_Letter_Sent__c</fullName>
    <label>Closure Letter Sent</label>
    <type>Date</type>
</CustomField>