force-app/main/default/objects/Service_Enrollment__c/fields/Completed_By_Pro_E__c.field-meta.xml
<CustomField>
    <fullName>Completed_By_Pro_E__c</fullName>
    <label>Completed By (Pro E)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>