force-app/main/default/objects/Service_Enrollment__c/fields/Coordinator_s_Questions_Comments_Concern__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_s_Questions_Comments_Concern__c</fullName>
    <label>Coordinator&apos;s Questions/Comments/Concern</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>