force-app/main/default/objects/Service_Enrollment__c/fields/Coordinator_s_Summary_Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_s_Summary_Current_Situation__c</fullName>
    <label>Coordinator&apos;s Summary Current Situation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>