force-app/main/default/objects/Service_Enrollment__c/fields/Copy1_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Copy1_Attention_To__c</fullName>
    <label>Copy1  Attention To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>