force-app/main/default/objects/Service_Enrollment__c/fields/Copy1_City__c.field-meta.xml
<CustomField>
    <fullName>Copy1_City__c</fullName>
    <label>Copy1 City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>