force-app/main/default/objects/Service_Enrollment__c/fields/Copy1_State__c.field-meta.xml
<CustomField>
    <fullName>Copy1_State__c</fullName>
    <label>Copy1 State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_Abreviations</valueSetName>
    </valueSet>
</CustomField>