force-app/main/default/objects/Service_Enrollment__c/fields/Copy1_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Copy1_Street_1__c</fullName>
    <label>Copy1 Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>