force-app/main/default/objects/Service_Enrollment__c/fields/Copy1_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Copy1_Street_2__c</fullName>
    <label>Copy1 Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>