force-app/main/default/objects/Service_Enrollment__c/fields/Copy1_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Copy1_Zip_Code__c</fullName>
    <label>Copy1 Zip Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>