force-app/main/default/objects/Service_Enrollment__c/fields/Copy2_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Copy2_Attention_To__c</fullName>
    <label>Copy2  Attention To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>