force-app/main/default/objects/Service_Enrollment__c/fields/Copy2_City__c.field-meta.xml
<CustomField>
    <fullName>Copy2_City__c</fullName>
    <label>Copy2 City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>