force-app/main/default/objects/Service_Enrollment__c/fields/Copy2_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Copy2_Street_1__c</fullName>
    <label>Copy2 Street 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>