force-app/main/default/objects/Service_Enrollment__c/fields/Copy2_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Copy2_Zip_Code__c</fullName>
    <label>Copy2 Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>