force-app/main/default/objects/Service_Enrollment__c/fields/Copy_1_Do_Not_Pay_Watermark_Display__c.field-meta.xml
<CustomField>
    <fullName>Copy_1_Do_Not_Pay_Watermark_Display__c</fullName>
    <formula>&quot;Yes&quot;</formula>
    <label>Copy 1 Do Not Pay Watermark Display</label>
    <type>Text</type>
</CustomField>