force-app/main/default/objects/Service_Enrollment__c/fields/Copy_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Copy_1_Email__c</fullName>
    <label>Copy 1 Email</label>
    <type>Email</type>
</CustomField>