force-app/main/default/objects/Service_Enrollment__c/fields/Copy_2_Do_Not_Pay_Watermark_Display__c.field-meta.xml
<CustomField>
    <fullName>Copy_2_Do_Not_Pay_Watermark_Display__c</fullName>
    <formula>&quot;Yes&quot;</formula>
    <label>Copy 2 Do Not Pay Watermark Display</label>
    <type>Text</type>
</CustomField>