force-app/main/default/objects/Service_Enrollment__c/fields/Copy_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Copy_2_Email__c</fullName>
    <label>Copy 2 Email</label>
    <type>Email</type>
</CustomField>