force-app/main/default/objects/Service_Enrollment__c/fields/Copy_2_Invoice_Options__c.field-meta.xml
<CustomField>
    <fullName>Copy_2_Invoice_Options__c</fullName>
    <label>Copy 2 Invoice Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Options</valueSetName>
    </valueSet>
</CustomField>