force-app/main/default/objects/Service_Enrollment__c/fields/Court_Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Court_Date_Established__c</fullName>
    <label>Court Date Established</label>
    <type>Date</type>
</CustomField>