force-app/main/default/objects/Service_Enrollment__c/fields/Fee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fee_Comments__c</fullName>
    <label>Fee Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>