force-app/main/default/objects/Service_Enrollment__c/fields/Fee_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Fee_Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Deferred</label>
    <type>Checkbox</type>
</CustomField>