force-app/main/default/objects/Service_Enrollment__c/fields/Fee_Take_Administration__c.field-meta.xml
<CustomField>
    <fullName>Fee_Take_Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Take Administration</label>
    <type>Checkbox</type>
</CustomField>