force-app/main/default/objects/Service_Enrollment__c/fields/Fee_Take_Investment__c.field-meta.xml
<CustomField>
    <fullName>Fee_Take_Investment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Take Investment</label>
    <type>Checkbox</type>
</CustomField>