force-app/main/default/objects/Service_Enrollment__c/fields/Fee_Take_Setup__c.field-meta.xml
<CustomField>
    <fullName>Fee_Take_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Take Setup</label>
    <type>Checkbox</type>
</CustomField>