force-app/main/default/objects/Service_Enrollment__c/fields/Fee_Take_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Fee_Take_Trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Take Trustee</label>
    <type>Checkbox</type>
</CustomField>