force-app/main/default/objects/Service_Enrollment__c/fields/Has_Driver_s_License__c.field-meta.xml
<CustomField>
    <fullName>Has_Driver_s_License__c</fullName>
    <label>Has Driver&apos;s License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>