force-app/main/default/objects/Service_Enrollment__c/fields/How_Disability_Affects_Bene_s_Life__c.field-meta.xml
<CustomField>
    <fullName>How_Disability_Affects_Bene_s_Life__c</fullName>
    <label>How Disability Affects Bene&apos;s Life</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>