force-app/main/default/objects/Service_Enrollment__c/fields/How_Disability_Affects_Mobility__c.field-meta.xml
<CustomField>
    <fullName>How_Disability_Affects_Mobility__c</fullName>
    <label>How Disability Affects Mobility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>