force-app/main/default/objects/Service_Enrollment__c/fields/Info_Living_Situation_Not_Safe_Hygienic__c.field-meta.xml
<CustomField>
    <fullName>Info_Living_Situation_Not_Safe_Hygienic__c</fullName>
    <label>Info Living Situation Not Safe/Hygienic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>