force-app/main/default/objects/Service_Enrollment__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Service Enrollments</relationshipLabel>
    <relationshipName>Service_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>