force-app/main/default/objects/Service_Enrollment__c/fields/Internal_Billing__c.field-meta.xml
<CustomField>
    <fullName>Internal_Billing__c</fullName>
    <formula>CASE(
    TEXT(Service_Picklist__c),
    &quot;Co-Trustee&quot;, &quot;Yes&quot;,
    &quot;Delegated Trust&quot;, &quot;Yes&quot;,
    &quot;Pooled 1st Party Trust&quot;, &quot;Yes&quot;,
    &quot;Pooled 3rd Party Trust&quot;, &quot;Yes&quot;,
    &quot;Private Trust Advisory&quot;, &quot;Yes&quot;,
    &quot;Sole Trustee 1st Party Trust&quot;, &quot;Yes&quot;,
    &quot;Sole Trustee 3rd Party Trust&quot;, &quot;Yes&quot;,
   &quot;No&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Billing</label>
    <type>Text</type>
</CustomField>