force-app/main/default/objects/Service_Enrollment__c/fields/Invoice_Terms__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Terms__c</fullName>
    <formula>&quot;Net 30&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Terms</label>
    <type>Text</type>
</CustomField>