force-app/main/default/objects/Service_Enrollment__c/fields/Is_Beneficiary_Employed__c.field-meta.xml
<CustomField>
    <fullName>Is_Beneficiary_Employed__c</fullName>
    <label>Is Beneficiary Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>