force-app/main/default/objects/Service_Enrollment__c/fields/Laptop_Computer_Access__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Computer_Access__c</fullName>
    <label>Laptop/Computer Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>