force-app/main/default/objects/Service_Enrollment__c/fields/Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Living_Situation</valueSetName>
    </valueSet>
</CustomField>