force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Attention__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Attention__c</fullName>
    <label>Mail To Attention</label>
    <length>50</length>
    <type>Text</type>
</CustomField>