force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Do_Not_Pay_Watermark_Display__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Do_Not_Pay_Watermark_Display__c</fullName>
    <formula>&quot;Yes&quot;</formula>
    <label>Mail To Do Not Pay Watermark Display</label>
    <type>Text</type>
</CustomField>