force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Email__c</fullName>
    <label>Mail To Email</label>
    <type>Email</type>
</CustomField>