force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Invoice_Options__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Invoice_Options__c</fullName>
    <label>Mail To Invoice Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Options</valueSetName>
    </valueSet>
</CustomField>