force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Street_1__c</fullName>
    <label>Mail To Street 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>