force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Street_2__c</fullName>
    <label>Mail To Street 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>