force-app/main/default/objects/Service_Enrollment__c/fields/Mail_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Zip_Code__c</fullName>
    <label>Mail To Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>