force-app/main/default/objects/Service_Enrollment__c/fields/Mobility_Affected_by_Disability__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Affected_by_Disability__c</fullName>
    <label>Mobility Affected by Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>