force-app/main/default/objects/Service_Enrollment__c/fields/Monthly_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pay__c</fullName>
    <label>Monthly Pay</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>