force-app/main/default/objects/Service_Enrollment__c/fields/Needs_Help_Applying_for_Public_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Needs_Help_Applying_for_Public_Benefits__c</fullName>
    <label>Needs Help Applying for Public Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>