force-app/main/default/objects/Service_Enrollment__c/fields/Number_of_Occupants_w_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Occupants_w_Beneficiary__c</fullName>
    <label>Number of Occupants w/ Beneficiary</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>