force-app/main/default/objects/Service_Enrollment__c/fields/Other_People_Who_Support__c.field-meta.xml
<CustomField>
    <fullName>Other_People_Who_Support__c</fullName>
    <label>Other People Who Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>