force-app/main/default/objects/Service_Enrollment__c/fields/Plan_Field__c.field-meta.xml
<CustomField>
    <fullName>Plan_Field__c</fullName>
    <label>Plan Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>