force-app/main/default/objects/Service_Enrollment__c/fields/Primary_Rep_Information__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Information__c</fullName>
    <formula>Trust__r.Primary_Rep_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Information</label>
    <type>Text</type>
</CustomField>