force-app/main/default/objects/Service_Enrollment__c/fields/ProfileID__c.field-meta.xml
<CustomField>
    <fullName>ProfileID__c</fullName>
    <label>ProfileID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>