force-app/main/default/objects/Service_Enrollment__c/fields/Provide_Documents_in_Alternative_Format__c.field-meta.xml
<CustomField>
    <fullName>Provide_Documents_in_Alternative_Format__c</fullName>
    <label>Provide Documents in Alternative Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>