force-app/main/default/objects/Service_Enrollment__c/fields/Public_Transportation_Access__c.field-meta.xml
<CustomField>
    <fullName>Public_Transportation_Access__c</fullName>
    <label>Public Transportation Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>