force-app/main/default/objects/Service_Enrollment__c/fields/QBOL_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>QBOL_Internal_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>QBOL Internal ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>