force-app/main/default/objects/Service_Enrollment__c/fields/Quickbooks_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Display_Name__c</fullName>
    <description>Used in the Quickbooks Integration - DO NOT CHANGE</description>
    <formula>Account_Number__c+&quot; - &quot;+ Client__r.Account.Quickbooks_Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Display Name</label>
    <type>Text</type>
</CustomField>