force-app/main/default/objects/Service_Enrollment__c/fields/Quickbooks_Internal_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Internal_Account_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Quickbooks Internal Account ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>