force-app/main/default/objects/Service_Enrollment__c/fields/Reason_for_Closing_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closing_Denial__c</fullName>
    <inlineHelpText>Please enter a reason for closing or denial before changing the Status field.</inlineHelpText>
    <label>Reason for Closing/Denial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>