force-app/main/default/objects/Service_Enrollment__c/fields/Report_on_Care_Management_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_on_Care_Management_Fields__c</fullName>
    <formula>hyperlink(&quot;/lightning/r/Report/00OVt000007PqvRMAS/view?queryScope=userFolders&amp;fv0=&quot;&amp;Id, &quot;Click for Care Management Report&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report on Care Management Fields</label>
    <type>Text</type>
</CustomField>