force-app/main/default/objects/Service_Enrollment__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>xService</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service Enrollments</relationshipLabel>
    <relationshipName>Service_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>