force-app/main/default/objects/Service_Enrollment__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <label>Service Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>